--- a/BikeWale.UI/css/scooters/listing.css
+++ b/BikeWale.UI/css/scooters/listing.css
@@ -54,7 +54,7 @@
     padding-top: 10px;
     padding-right: 10px; }
   .bike-listing .model-jcarousel-image-preview img {
-    background: url("https://imgd4.aeplcdn.com/0x0/bw/static/sprites/d/loader.gif") no-repeat center; }
+    background: url("https://imgd.aeplcdn.com/0x0/bw/static/sprites/d/loader.gif") no-repeat center; }
 
 .key-size-14 {
   font-size: 14px;
@@ -335,7 +335,7 @@
   background-position: -3026px 0; }
 
 .city-sprite {
-  background: url(https://imgd2.aeplcdn.com/0x0/bw/static/sprites/d/city-sprite.png?26Dec2016) no-repeat;
+  background: url(https://imgd.aeplcdn.com/0x0/bw/static/sprites/d/city-sprite.png?26Dec2016) no-repeat;
   display: inline-block; }
 
 .mumbai-icon,
@@ -433,7 +433,7 @@
     width: 292px;
     height: 164px;
     display: block;
-    background: url("https://imgd4.aeplcdn.com/0x0/bw/static/sprites/d/loader.gif") no-repeat center center; }
+    background: url("https://imgd.aeplcdn.com/0x0/bw/static/sprites/d/loader.gif") no-repeat center center; }
   .model-preview-image-container img {
     width: 100%;
     height: 164px; }
