--- a/BikeWale.UI/m/css/upcoming-bikes/upcoming-bikes.css
+++ b/BikeWale.UI/m/css/upcoming-bikes/upcoming-bikes.css
@@ -80,7 +80,7 @@
   .bike-listing-vertical .item-image-content {
     width: 292px;
     height: 164px;
-    background: url(https://imgd1.aeplcdn.com/0x0/bw/static/sprites/m/circleloader.gif) no-repeat center;
+    background: url(https://imgd.aeplcdn.com/0x0/bw/static/sprites/m/circleloader.gif) no-repeat center;
     margin-bottom: 5px; }
     .bike-listing-vertical .item-image-content img {
       width: 100%; }
